# horizon

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build_old.rs  start  start.bat  start.sh  style_guide.md  todo.md
asset/: Cargo.toml
asset/src/: build.rs  common.rs  lib.rs
editor/: Cargo.toml  build.rs  bundle.w64
editor/src/: main.rs
horizon/: Cargo.toml  build.rs  old_build.rs  start.sh
horizon/src/: debugger.rs  ecs.rs  egui_util.rs  lib.rs  main.rs  render.rs  state.rs  things.md  utils.rs
horizon/src/shaders/: shader.wgsl
horse/: Cargo.toml
horse/src/: de.rs  error.rs  lib.rs  main.rs  ser.rs  types.rs
rkpk/: .rustc_info.json  Cargo.toml
rkpk-rs/: Cargo.toml
rkpk-rs/src/: lib.rs  packer.rs  types.rs
rkpk/src/: cache.rs  composite.rs  error.rs  lib.rs  main.rs  packer.rs  types.rs
rkpk/src/common/: mod.rs
rkpk/src/old/: cache.rs  packer.rs
rkpk/src/older/: build.rs  error.rs  lib.rs  packer.rs
rkpk/src/older/old/: cache.rs  packer.rs
rkpk/src/rectpack2d/: best_bin_finder.rs  empty_spaces.rs  finders_interface.rs  insert_and_split.rs  mod.rs  rect_structs.rs
src/: lib.rs  lib_old.rs  lib_old2.rs  main.rs
src/shaders/: shader.wgsl
