[package]
name = "horizon"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.0"
log = "0.4.0"
env_logger = "0.8.4"
tokio = { version = "1.15.0", features = ["full"] }
