[package]
name = "horizon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.0"
log = "0.4.0"
env_logger = "0.8.4"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
tokio = { version = "1.15.0", features = ["full"] }
cgmath = "0.18.0"
