[package]
name = "horizon-engine"
version = "0.1.0"
edition = "2021"
description = "simple 2d game framework"
authors = ["1e1001"]

[dependencies]
# graphics
wgpu = "0.12.0"
winit = "0.26.1"

# logging
log = "0.4.14"
env_logger = "0.9.0"

# image
image = {version = "0.23.14", default-features = false, features = ["png"]}

# byte fucking
bytemuck = { version = "1.7.3", features = [ "derive" ] }

# async
tokio = { version = "1.15.0", features = [ "full" ] }

# math
cgmath = "0.18.0"

# debug gui
egui = "0.16.1"
egui_wgpu_backend = "0.16.0"
egui_winit_platform = "0.13.0"
