[package]
name = "horizon"
version = "0.1.0"
edition = "2021"
description = "simple 2d game framework"
authors = ["1e1001"]

# graphics
[dependencies.wgpu]
version = "0.12"
[dependencies.winit]
version = "0.26"

# logging
[dependencies.log]
version = "0.4"

# image
[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

# byte fucking
[dependencies.bytemuck]
version = "1.7"
features = [ "derive" ]

# async
[dependencies.tokio]
version = "1.16"
features = [ "full" ]

# math
[dependencies.cgmath]
version = "0.18"

# debug gui
[dependencies.egui]
version = "0.16"
[dependencies.egui_wgpu_backend]
version = "0.16"
[dependencies.egui_winit_platform]
version = "0.13"

# poly gone
[dependencies.polygon2]
version = "0.3"

[build-dependencies.rkpk]
path = "../rkpk/"
