[package]
name = "rkpk"
version = "0.1.0"
authors = ["1e1001"]
description = "image compositing wrapper for rectangle-pack"
edition = "2021"

[dependencies]
image = {version = "0.23.14", default-features = false, features = ["png"]}
# this library is actually ass to use so no!
# rectangle-pack = "0.4.2"
