[package]
name = "rkpk"
version = "0.1.0"
authors = ["1e1001"]
description = "image compositing wrapper for rectpack2d"
edition = "2021"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"

[dependencies.postcard]
version = "0.7"

[dependencies.thiserror]
version = "1.0"

[dependencies.asset]
path = "../asset"

[features]
build = ["asset/build"]
runtime = ["asset/runtime"]
